--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "cakephp/cakephp": "3.10.*",
         "cakephp/migrations": "^2.0.0",
         "cakephp/plugin-installer": "^1.3",
+        "facebook/graph-sdk": "^5.7",
         "google/apiclient": "2.12.1",
         "mobiledetect/mobiledetectlib": "2.*",
-        "nao-pon/flysystem-google-drive": "~1.1"
+        "nao-pon/flysystem-google-drive": "~1.1",
+        "phpmailer/phpmailer": "^6.6"
     },
     "require-dev": {
         "cakephp/bake": "^1.9.0",
